# bzijkPlayer

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/luoye/bzijkplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/ffmpeginclude/arm64-v8a/ffmpeg/: config.h
app/src/main/cpp/ffmpeginclude/armeabi-v7a/ffmpeg/: config.h
app/src/main/cpp/ijkmedia/ijkplayer/: config.h  ff_ffinc.h  ff_ffplay.c  ff_ffplay_def.h  ijkplayer.c
app/src/main/cpp/ijkmedia/ijkplayer/ijkavformat/: ijkasync.c
app/src/main/cpp/ijkmedia/ijksdl/android/: ijksdl_android_jni.h
app/src/main/java/com/luoye/bzijkplayer/: IJKPlayerTestActivity.java  MainActivity.java  PermissionUtil.java
app/src/main/java/com/ufotosoft/bzffmpeg/: BZApplication.java
app/src/main/java/com/ufotosoft/bzffmpeg/activity/: BZVideoView2SingleActivity.java
app/src/main/java/com/ufotosoft/bzmedia/: BZMedia.java
app/src/main/java/com/ufotosoft/bzmedia/bean/: BZColor.java  BZScaleType.java  BZVector.java  BZVector3.java  BgFillType.java  FilterInfo.java  GifAttribute.java  MagicVideoEditInfo.java  ParticleAttribute.java  ParticleBean.java  ParticleEditInfo.java  ParticleVideoEditInfo.java  RecordDrawInfo.java  TextureHandleInfo.java  TextureInfo.java  VideoEditInfo.java  VideoEditItem.java  VideoRecordParams.java  VideoSize.java  VideoTransCodeParams.java  ViewPort.java
app/src/main/java/com/ufotosoft/bzmedia/encoder/: EglCore.java  EglSurfaceBase.java  GlUtil.java  H264ParseUtil.java  OnVideoEncodeListener.java  OnVideoPacketAvailableListener.java  TextureMovieEncoder.java  VideoEncoderCore.java  WindowSurface.java
app/src/main/java/com/ufotosoft/bzmedia/glutils/: BZOpenGlUtils.java  BZRenderEngine.java  BaseMatrixProgram.java  BaseProgram.java  EglContextWrapper.java  ExternalTextureProgram.java  FrameBufferUtil.java  GLTexturesUtil.java  GLUtil.java  RecordInfoQueue.java  VideoFrameGetterUtil.java
app/src/main/java/com/ufotosoft/bzmedia/recorder/: AudioCapture.java  H264Encoder.java  OnRecordPCMListener.java  OnRecorderErrorListener.java  ParticleEditManager.java  RecorderItem.java  VideoRecorder.java  VideoRecorderBase.java  VideoRecorderBuild.java  VideoRecorderMediaCodec.java  VideoRecorderNative.java  VideoTacticsManager.java  Yuv420Util.java
app/src/main/java/com/ufotosoft/bzmedia/utils/: BZAssetsFileManager.java  BZBitmapUtil.java  BZCPUTool.java  BZDensityUtil.java  BZDeviceUtils.java  BZFileUtils.java  BZHWDecode.java  BZLogUtil.java  BZMD5Util.java  BZMultilInputVideoPathUtils.java  BZResourceParserUtil.java  BZScreenUtils.java  BZSpUtils.java  BZStringUtils.java  MatrixVaryTools.java  PCMPlayer.java  TextResourceReader.java
app/src/main/java/com/ufotosoft/bzmedia/videomagic/: VideoMagicUtil.java
app/src/main/java/com/ufotosoft/bzmedia/widget/: BZBaseGLSurfaceView.java  BZGLImageView.java  BZGifView.java  BZMPVideoView.java  BZNativeSurfaceView.java  BZSimpleVideoView.java  BZVideo4GifView.java  BZVideoView.java  BZVideoView2.java  BackAndForthVideoPlayer.java  GLTextureView.java  MultiInputVideoPlayer.java  MultiVideoSeekBar.java  VideoPlayer.java  VideoSeekBar.java
app/src/main/java/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java
app/src/main/res/layout/: activity_bzvideo_view2_single.xml  activity_ijkplayer_test.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/luoye/bzijkplayer/: ExampleUnitTest.java
bzijkplayerlib/: build.gradle
bzijkplayerlib/src/main/: AndroidManifest.xml
bzijkplayerlib/src/main/cpp/: native-lib.cpp
bzijkplayerlib/src/main/cpp/ffmpeginclude/armeabi-v7a/ffmpeg/: config.h
bzijkplayerlib/src/main/cpp/ffmpeginclude/libffmpeg/: config.h
bzijkplayerlib/src/main/cpp/ijkmedia/ijkplayer/: ff_ffplay.c  ff_ffplay_def.h
bzijkplayerlib/src/main/cpp/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
bzijkplayerlib/src/main/cpp/ijkmedia/ijksoundtouch/: soundtouch-jni.cpp
bzijkplayerlib/src/main/res/layout/: activity_ijkplayer_test.xml
gradle/wrapper/: gradle-wrapper.properties
